--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_auth: ^4.10.1
+  firebase_core: ^2.17.0
+  fluttertoast: ^8.2.2
+  google_fonts: ^6.1.0
   date_format: ^2.0.7
   provider: ^6.0.5
   intl:
