--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_core: ^2.17.0
   fluttertoast: ^8.2.2
   google_fonts: ^6.1.0
+  introduction_screen: ^3.1.12
+  smooth_page_indicator: ^1.1.0
   date_format: ^2.0.7
   provider: ^6.0.5
   intl:
