--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   google_fonts: ^6.1.0
   introduction_screen: ^3.1.12
   smooth_page_indicator: ^1.1.0
+  flutter_staggered_grid_view: ^0.7.0
   date_format: ^2.0.7
   provider: ^6.0.5
   intl:
